--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 			</div>
 
 			<div class="column">
-				<img class="c2" src="./images/test.jpg">
+				<img class="c2" src="./images/asha.jpg">
 				<P>ASHA WILSON </br>
 					wie affinity chair, IEEE AISAT SB </P>
 
