added media view

--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 
 <!--body begins-->
 <body>
+	<div id="main">
 	<header>
 		<div class="container">
 			<div id="branding">
@@ -88,4 +89,5 @@
 	</section>
 		
 	</footer>
+    </div>
 </body>
