--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
 
 <!--body begins-->
 <body>
+	<div id="main">
 	<header>
 		<div class="container">
 			<div id="branding">
@@ -52,4 +53,5 @@
 	</section>
 		
 	</footer>
+    </div>
 </body>
