--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <!--body begins-->
 <body>
+	<div id="main">
     <header>
 		<div class="container">
 			<div id="branding">
@@ -112,4 +113,5 @@
 	</section>
 		
 	</footer>
+    </div>
 </body>
