--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!--register link-->
     <section id="register1">
-    	<button type="submit" class="register"><a href="https://goo.gl/forms/BYW8OtsPVsVfTl722">Register now</a></button>
+    	<button type="submit" class="register"><a class= "text" href="https://goo.gl/forms/BYW8OtsPVsVfTl722">Register now</a></button>
     </section>
 
     <!-- ieee and college logo-->
@@ -92,11 +92,13 @@
 	<section>
 		<div class="power">
 			<h2>Powered By:</h2>
-			<div class="p1">
-			<img src="./images/ieee.gif">
+		</div>
+		<div class="logorow">
+			<div class="logo">
+			<img class= "p1" src="./images/ieee.gif">
 		    </div>
-		    <div class="p2">
-			<img src="./images/logoaisat.jpeg">
+		    <div class="logo">
+			<img class="p2" src="./images/logoaisat.jpeg">
 		    </div>
 		</div>
 	</section>
