--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <h2>15, 16 september.</h2>
             </div>
             <div>
-              <button type="submit" class="row"><a class= "text" href="https://docs.google.com/forms/d/e/1FAIpQLSdb2Vqc4Gz-FfEayl_vb0_RTkLhzK6ZZpFgE6_D4fRJ50vdNQ/viewform?usp=sf_link">Register now</a></button>
+              <button type="submit" class="row"><a class= "text" href="https://goo.gl/forms/0nXq0d1F6fHiJvMD2">Register now</a></button>
             </div>
           </div>
       </div>
